# NIRS

./: .flake8  .gitignore  1_NIR_Tomato_EDA.ipynb  2_NIR_Tomato_Preprocessing.ipynb  3_NIR_Tomato_Modeling_with_NIR_pipelines.ipynb  README.md  Tomato_Viavi_Brix_model_pulp.csv  fix_fstrings.py  nir_preprocessing.py  nir_tomato_best_mlp_with_nir_model.joblib  nir_tomato_data_splits.joblib  nir_tomato_model_details_with_nir_preprocessing.joblib  nir_tomato_processed_dataset.joblib  popis.txt  pyproject.toml  requirements.txt  setup.py
configs/: README.md  pls_snv_savgol.yaml  rf_hyperparams_tuning.yaml  rf_msc_feature_selection.yaml  test_pls_experiment.yaml  xgb_genetic_algorithm.yaml
docs/: experiments.md
experiments/: __init__.py  analyze_models.py  create_config.py  experiment_manager.py  process_data.py  process_tomato_data.py  run_experiment.py  run_experiments.py  run_from_config.py  run_mlflow_server.py  train_model.py
models/: pls_Brix_20250528_173858.pkl  pls_Brix_20250528_173902.pkl  pls_Brix_20250528_174047.pkl  pls_Brix_20250528_174050.pkl  pls_Brix_20250528_174707.pkl  pls_Brix_20250528_174710.pkl  pls_Brix_20250528_174816.pkl  pls_Brix_20250528_174819.pkl  pls_Brix_20250528_191028.pkl  pls_Brix_20250528_191034.pkl  pls_Brix_20250528_191230.pkl  pls_Brix_20250528_191235.pkl  pls_Brix_20250528_192418.pkl  pls_Brix_20250528_192424.pkl  pls_Brix_20250528_193258.pkl  pls_Brix_20250528_193304.pkl  pls_Brix_20250528_204451.pkl  pls_Brix_20250528_204457.pkl  pls_Brix_20250528_234412.pkl  pls_Brix_20250528_234514.pkl  pls_Brix_20250528_234518.pkl  pls_Brix_20250528_234907.pkl  pls_Brix_20250528_234913.pkl  pls_Brix_cars20_20250528_174824.pkl  pls_Brix_cars20_20250528_193316.pkl  pls_Brix_cars20_20250528_234925.pkl  pls_Brix_cars50_20250528_174826.pkl  pls_Brix_cars50_20250528_193322.pkl  pls_Brix_cars50_20250528_234929.pkl  pls_Brix_ga20_20250528_175130.pkl  pls_Brix_ga20_20250528_193626.pkl  pls_Brix_ga20_20250528_235241.pkl  pls_Brix_ga50_20250528_175445.pkl  pls_Brix_ga50_20250528_193941.pkl  pls_Brix_ga50_20250528_235530.pkl  pls_Brix_vip20_20250528_174052.pkl  pls_Brix_vip20_20250528_174821.pkl  pls_Brix_vip20_20250528_193308.pkl  pls_Brix_vip20_20250528_204501.pkl  pls_Brix_vip20_20250528_234917.pkl  (+137 more)
nirs_tomato/: __init__.py  config.py
notebooks/: 1_NIR_Tomato_EDA.ipynb
results/: experiment_results_20250528_164157.csv  experiment_results_20250528_173902.csv  experiment_results_20250528_174711.csv  experiment_results_20250528_180656.csv
scripts/: analyze_models.py  process_data.py  run_experiments.py  run_mlflow_server.py  simple_train.py  train_model.py
tests/: __init__.py  conftest.py  test_config.py
(+1730 files in other folders)
