[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nirs-tomato"
version = "0.1.0"
description = "NIR spectroscopy analysis for tomato quality prediction"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Katya Biser", email = "your.email@example.com"}
]
keywords = ["NIR", "spectroscopy", "tomato", "machine-learning", "quality-prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "joblib>=1.2.0",
    "mlflow>=2.11.0",
    "pydantic>=1.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "deap>=1.3.3",
    "optuna>=3.0.0",
    "statsmodels>=0.14.0",
    "boto3>=1.34.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "pre-commit>=2.15",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/NIRS"
"Bug Reports" = "https://github.com/your-username/NIRS/issues"
"Source" = "https://github.com/your-username/NIRS"

[tool.setuptools.packages.find]
where = ["."]
include = ["nirs_tomato*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["nirs_tomato"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true 